Update Telecom Churn Prediction_FIXXXXX.ipynb
chg loaded model to github link

--- a/Telecom Churn Prediction_FIXXXXX.ipynb
+++ b/Telecom Churn Prediction_FIXXXXX.ipynb
@@ -3650,7 +3650,7 @@
     "import joblib\n",
     "\n",
     "# Load the saved model\n",
-    "loaded_model = joblib.load('churn_xgbrf_model.pkl')"
+    "loaded_model = joblib.load('https://github.com/gusti19/churnrate/blob/main/churn_xgbrf_model_2.pkl')"
    ]
   },
   {
